--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,153 @@
+/****** App.js ******/
+
 .App {
+  height: 100%;
   text-align: center;
+  background: #F7F0C6;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 25vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+/****** Header.js ******/
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  padding: 5rem 5rem 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-label {
+  margin-left: 1rem;
+}
+
+.menu-label {
+  color: black;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+/****** Landing.js ******/
+
+.App-Landing {
+  padding: 100px;
+}
+
+/****** Products.js ******/
+
+.container {
+  /* margin-bottom: 20px; */
+  padding: 100px;
+}
+
+/****** About.js ******/
+.About {
+  padding: 100px;
+}
+
+/****** DrawerToggleButton.js ******/
+
+.toggle-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 24px;
+  width: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.toggle-button:focus {
+  outline: none;
+}
+
+.toggle-button-line {
+  width: 30px;
+  height: 2px;
+  background: black;
+}
+
+/****** sideDrawer.js ******/
+.side-drawer {
+  height: 100%;
+  background: white;
+  box-shadow: 1px 0 7px rgb(0, 0, 0, 0.5);
+  position:  fixed;
+  top: 0;
+  left: 0;
+  width: 70%;
+  max-width: 400px;
+  z-index: 200;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out
+}
+
+.side-drawer.open{
+  transform: translateX(0);
+}
+
+.side-drawer ul {
+  text-align: left;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.side-drawer li {
+  margin: 0.5rem 0;
+}
+
+.side-drawer a {
+   color: black;
+  text-decoration: none;
+  font-size: 1.2rem; 
+}
+
+.side-drawer a:hover,
+.side-drawer a.active {
+  color: #fa923f;
+}
+
+.user-info-line {
+  margin: 50px auto;
+  background: #282c34;
+  width: 90%;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.user-info img {
+  margin-top: 20px; 
+  border: rgba(0, 0, 0, 0.3) solid; 
+  border-radius: 50%;
+  width: auto;
+  height: 200px;
+}
+
+.user-info h3 {
+  margin-top: 10px;
+}
+
+/****** Backdrop.js ******/
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
